--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sweetroll",
-  "version": "0.0.2",
-  "description": "A light, minimalist, DRY, isomorphic toolkit for HTML+JS applications.",
+  "version": "0.0.3",
+  "description": "A light, minimalist, DRY, isomorphic toolkit for HTML+JS applications, now at http://github.com/jsonnull/bellavista",
   "keywords": [
     "DRY",
     "minimal",
@@ -24,24 +24,10 @@
     "type": "git",
     "url": "https://github.com/jsonnull/sweetroll.git"
   },
-  "_id": "sweetroll@0.0.2",
-  "dist": {
-    "shasum": "f1b280bb6f3320fdad4d75e1523d83c8a5700b5b",
-    "tarball": "http://registry.npmjs.org/sweetroll/-/sweetroll-0.0.2.tgz"
-  },
-  "_from": "sweetroll@*",
-  "_npmVersion": "1.3.24",
-  "_npmUser": {
-    "name": "jsonnull",
-    "email": "jsonnull@gmail.com"
-  },
   "maintainers": [
     {
       "name": "jsonnull",
       "email": "jsonnull@gmail.com"
     }
-  ],
-  "directories": {},
-  "_shasum": "f1b280bb6f3320fdad4d75e1523d83c8a5700b5b",
-  "_resolved": "https://registry.npmjs.org/sweetroll/-/sweetroll-0.0.2.tgz"
+  ]
 }
